[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/Themes/theme_dark.tres" type="Theme" id=1]
[ext_resource path="res://UI/ColorPalettePicker.gd" type="Script" id=2]
[ext_resource path="res://Palettes/default_palette.tres" type="Resource" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.207843, 0.211765, 0.227451, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
shadow_color = Color( 0, 0, 0, 0.313726 )
shadow_size = 2

[sub_resource type="StyleBoxEmpty" id=2]

[node name="ColorPalettePicker" type="PanelContainer"]
margin_right = 410.0
margin_bottom = 115.0
rect_min_size = Vector2( 400, 115 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
palette = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 410.0
margin_bottom = 115.0
custom_constants/margin_right = 6
custom_constants/margin_top = 6
custom_constants/margin_left = 6
custom_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 6.0
margin_top = 6.0
margin_right = 404.0
margin_bottom = 109.0
theme = ExtResource( 1 )

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 398.0
margin_bottom = 25.0
custom_constants/separation = 8

[node name="PaletteSelectionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/Buttons"]
margin_right = 26.0
margin_bottom = 25.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditColorButton" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
margin_left = 34.0
margin_right = 70.0
margin_bottom = 25.0
hint_tooltip = "Change the currently seleted color"
text = "Edit"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 398.0
margin_bottom = 31.0
custom_styles/separator = SubResource( 2 )
custom_constants/separation = 2

[node name="ColorGrid" type="GridContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 398.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 11
